test(showtime): fix bounds and test configurations